mtp: fix several compilation warnings

https://bugzilla.gnome.org/show_bug.cgi?id=591228